[project]
name = "gemss-flow-matching"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ojas Shirekar", email = "ojas.shirekar@pm.me" }
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "jupyterlab>=4.2.3",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.4",
    "jax[cuda12]<=0.4.30",
    "flax>=0.8.5",
    "optax>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemss_flow_matching"]
